--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
       </div>
       <ul class="tasks-list"></ul>
     </div>
+
+    <div id="modal-box" class="modal">
+      <span class="modal-close" title="Close Modal">&times;</span>
+      <div class="modal-content">
+        <div class="modal-container">
+          <p>Are you sure you want to delete this task?</p>
+          <div class="clearfix">
+            <button type="button" class="modal-cancel">Cancel</button>
+            <button type="button" class="modal-delete">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
